# TinyLLM

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/tokenizers/: char_vocab.json
docs/: phase-00-project-map.md  phase-01-tokenizer.md
tests/: test_phase00_project_structure.py  test_tokenizer_char.py
tinyllm/: __init__.py  tokenizer_char.py
